added tests for addRelaionshipCommand
hvnt taken into account the ce and name

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -223,6 +223,7 @@ This section describes some noteworthy details on how certain features are imple
 === addRelationship command
 
 The addRelationship command adds a directed or undirected relationship between two persons in the address book.
+Name and confidence estimate are the optional fields in this command.
 The user is able to view the changes in the relationships in the graph window.
 
 ==== Design Considerations
@@ -905,12 +906,6 @@ Priorities: High (must have) - `* * \*`, Medium (nice to have) - `* \*`, Low (un
 
 |`* * *` |user |add relationships between people |show that two persons know each other
 
-|`* *` |user |add link:#named-relationship[named relationships] between people |show that two persons know each other via a specific method
-
-|`* *` |user |add link:#confidence-estimate[confidence estimate] to a person's attributes |differentiate between verified and unverified pieces of information
-
-|`* *` |user |add remarks about a relationship between people |record detailed information about the relationship between two people
-
 |`* *` |user with many persons in the address book |add profile pictures to each person |distinguish between people with the same name
 
 4+| Read operations
@@ -944,6 +939,10 @@ Priorities: High (must have) - `* * \*`, Medium (nice to have) - `* \*`, Low (un
 |`* * *` |user |update a person's details |update a person's details without having to create a new contact
 
 |`* *` |user |update the link:#confidence-estimate[confidence estimate] on a person's attributes |update confidence in pieces of information
+
+|`* *` |user |update link:#name[name of the relationship] of a relationship |show that two persons know each other via a specific method
+
+|`* *` |user |update link:#confidence-estimate[confidence estimate] of a relationship |differentiate between verified and unverified pieces of information
 
 |`* *` |user |change the colour of the network |personalise my address book
 
@@ -1118,18 +1117,14 @@ Use case ends.
 Use case resumes at step 2.
 
 [discrete]
-=== Use case: Add a named relationship between two persons
+=== Use case: Delete a relationship between two persons
 
 *MSS*
 
 1.  User requests to list persons
 2.  AddressBook shows a list of persons
-3.  User requests to add an relationship between two specific persons
-4.  AddressBook adds an relationship between those two persons
-5.  User requests to show a list of relationships
-6.  AddressBook shows a list of relationships
-7.  User requests to add a name to that relationship
-8.  AddressBook adds a name to that relationship
+3.  User requests to delete a relationship between two specific persons
+4.  AddressBook deletes the relationship between those two persons
 +
 Use case ends.
 
@@ -1146,13 +1141,6 @@ Use case ends.
 ** 3a1. AddressBook shows an error message.
 +
 Use case resumes at step 2.
-
-* 7a. The index of relationship given to be added name on is invalid.
-+
-[none]
-** 7a1. AddressBook shows an error message.
-+
-Use case resumes at step 6.
 
 [discrete]
 === Use case: Add a remark
