--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -127,26 +127,6 @@ Returns any person having names starting with `Betsy`, `Tim`, or `John`
 * `f Nam` +
 Returns `Nam`
 
-=== Locating persons by tag: `findtag` (alias `ft`)
-
-Finds persons who has a tag that matches the given keyword. +
-Format: `findtag KEYWORD [MORE_KEYWORDS]` or `ft KEYWORD [MORE_KEYWORDS]`
-
-****
-* The search is case insensitive. e.g `friends` will match `Friends`
-* The order of the keywords does not matter. e.g. `CS2103 Groupmate` will match `Groupmate CS2103`
-* Only the tag is searched.
-****
-
-Examples:
-
-* `find friends` +
-Returns `Alex Yeoh` and `Bernice Yu`
-* `find colleagues` +
-Returns `Bernice Yu` and `Roy Balakrishnan`
-* `ft Malay` +
-Returns `Adil`
-
 === Locating persons by any parameter: `filter` (alias `fi`)
 
 Finds persons who has parameters that matches the given keyword. +
@@ -164,7 +144,7 @@ Examples:
 Returns `Alex Yeoh` and `Bernice Yu`
 * `filter colleagues` +
 Returns `Bernice Yu` and `Roy Balakrishnan`
-* `ft alex Colleagues` +
+* `fi alex Colleagues` +
 Returns `Alex Yeoh`, `Bernice Yu` and `Roy Balakrishnan`
 
 === Locating persons by all parameter: `filterall` (alias `fa`)
@@ -184,9 +164,9 @@ Examples:
 Returns `Alex Yeoh` and `Bernice Yu`
 * `filterall colleagues` +
 Returns `Bernice Yu` and `Roy Balakrishnan`
-* `ft Bernice Colleagues` +
+* `fa Bernice Colleagues` +
 Returns `Bernice Yu`
-* `ft colleagues friends` +
+* `fa colleagues friends` +
 Returns `Bernice Yu`
 
 === Deleting a person : `delete` (alias `del`)
