--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -287,11 +287,14 @@ Delete specific tag from all contacts. +
 
 Clear all tags from specific contact. +
 
+// tag::recentlydeleted[]
 === Recently deleted : `recentlyDel` (Since v1.2)
 
 Shows recently deleted list of contacts for past 30 contacts. +
 Format: `recentlyDel`
+// end::recentlydeleted[]
 
+// tag::theme[]
 === Changing theme : `theme` (Since v1.5)
 
 Changes the colour theme of TheYellowPage from `DarkTheme.css` to `LightTheme.css` and vice versa. +
@@ -303,6 +306,7 @@ image::LightTheme.png[width="790"]
 _Figure 4.19.2 : Screenshot of TheYellowPage in LightTheme.css_ +
 
 Format: `theme`
+// end::theme[]
 
 === Moving contacts : `move` (Coming in v2.0)
 
