--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -416,18 +416,22 @@ We will now create a `ArrayList<Index> arrayOfIndex = new ArrayList<Index>();` t
 
 In the `DeleteMultipleCommand` class, the commandResult method is used which compares the index with the `lastShownList` in the model, similar to the method used in the `deleteCommand`. However, as `DeleteMultipleCommand` is designed to take in multiple indexes, a for-loop is used to loop the commandResult method so as to check for every index within the arrayList. The names that are deleted will be stored inside a `String listOfDeletedContacts` which will be used to display the results on the UI.
 
+// tag::recentlydeleted[]
 === Recently deleted list
 
 Recently deleted command is used to allow the user to have a list of the past 30 recently deleted contacts and their details.
 By keying in the command word `recentlyDel`, the command word will be detected in the `AddressBookParser` class and then the `RecentlyDeletedCommand` class would be executed.
 We will now create a `LinkedList<Person> RecentlyDeletedQueue = new LinkedList<>();` to store the recently deleted contacts for up to the past 30 contacts.
 In the `RecentlyDeletedCommand` class, the `commandResult` method is used which will show the deleted contacts.
+// end::recentlydeleted[]
 
+// tag::theme[]
 === Changing of theme
 
 The `ThemeCommand` is used so as to allow the user to change the colour theme of TheYellowPage with the use of a single command. This provides the user with options to choose their preferred theme of TheYellowPage.
 There are 2 themes to alternate from: `DarkTheme.css` and `LightTheme.css`. By keying in the command word `theme`, the command word will be detected by the `AddressBookParser` class and then the `ThemeCommand` class would be executed.
 By keying the command word `theme`, the theme of TheYellowPage will switch from `DarkTheme.css` to `LightTheme.css` and vice versa.
+// end::theme[]
 
 === Logging
 
