--- a/docs/team/jaryltan.adoc
+++ b/docs/team/jaryltan.adoc
@@ -6,7 +6,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 == LISA: Levels Integrated Secretarial Agent
 LISA: Levels Integrated Secretarial Agent is a desktop address book application used for teaching Software Engineering principles. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 6 kLoC.
 
-*Code contributed*: [https://github.com/CS2103AUG2017-T13-B1/main/pull/47/commits[Functional code]] [https://github.com/CS2103AUG2017-T13-B1/main/pull/47/commits/baf693dc2457e0dca1ca7812d9c47cdfea402e6b[Test code]]
+*Code contributed*: [../../collated/main/Juxarius.md[Functional code]] [../../collated/test/Juxarius.md[Test code]]
 
 === Enhancement Added: Date Parser
 
@@ -100,8 +100,13 @@ include::../DeveloperGuide.adoc[tag=tagManagement]
 ---
 
 
+=== Enhancements Implemented:
+Improved Tag Management +
+Autofill Feature +
+Date Parser +
+Overall Architecture of Program Flow for UI +
 
-=== Enhancements Proposed:
+=== Enhancements Proposed and has been implemented:
 Improved Tag Management +
 Autofill Feature +
 Insurance Class +
@@ -109,6 +114,14 @@ Insurance Management Features +
 Date Parser +
 Overall Architecture of Program Flow for UI +
 
+=== Enhancements Proposed to be implemented in the future:
+Command Shadowing +
+
 === Other contributions
 Helped properly implement sort contacts by name feature +
-Helped review fellow teammates PR and correct unconventional variable naming +
+Helped review fellow teammates PR and correct teammates misconceptions +
+Helped organise team's repo +
+Improved various commands of LISA +
+Helped out in CS2103 module forums [https://github.com/nus-cs2103-AY1718S1/forum/issues/177[Example Thread]] +
+Offered `DateParser` as a `Reuse-Offer` on module forums [https://github.com/nus-cs2103-AY1718S1/forum/issues/167[Easy Date Parser]] +
+Assisted other teams in finding bugs during acceptance testing session [https://github.com/CS2103AUG2017-F11-B1/main/issues/73[Bug Issue]]
