--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -452,7 +452,7 @@ Redo commands are _undoable_ with the `undo` command.
 
 Adds a remark to the specified person in Rolodex. +
 Format: `remark INDEX [r/REMARK]` +
-Alternatives: `remark` can be replaced by `note` or `rmk`
+Alternatives: `remark` can be replaced by `note` or `rmk` or `comment`
 
 ****
 * Adds a remark to the person at the specified `INDEX`.
