--- a/docs/team/Jolyn.adoc
+++ b/docs/team/Jolyn.adoc
@@ -50,7 +50,7 @@ the user's experience with Rolodex.
 
 ---
 
-image::Ui.png[width="800"]
+image::Ui2.png[width="800"]
 
 Some features of the UI:
 
@@ -63,7 +63,10 @@ Some features of the UI:
 * Split pane which separates the contact list from the other UI components is responsive;
 the divider is automatically maintained at the optimal position
 when window size changes
-* Avatar colors are randomized
+* Avatar colors are randomized and generated over a color range so that no two adjacent persons share the same avatar color.
+A result of using this color generator can be seen from the following screenshot.
+
+image::avatars.png[width="300"]
 
 ---
 
@@ -111,6 +114,7 @@ include::../UserGuide.adoc[leveloffset=2, tag=picture]
 === Other contributions
 * Added auto-selection to person that is newly added (Pull request https://github.com/CS2103AUG2017-W11-B2/main/pull/123[#123])
 * Added auto-selection to person that is newly edited (Pull request https://github.com/CS2103AUG2017-W11-B2/main/pull/102[#102])
+* Imported the Segoe UI font pack into the application (Pull request https://github.com/CS2103AUG2017-W11-B2/main/pull/136[#136])
 * Added a prompt text to the result display panel (Pull request https://github.com/CS2103AUG2017-W11-B2/main/pull/122[#122])
 * Added the removeTag method (Pull request https://github.com/CS2103AUG2017-W11-B2/main/pull/6[#6])
 * Updated the General Documentation (Pull requests https://github.com/CS2103AUG2017-W11-B2/main/pull/2[#2],
