--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -543,7 +543,7 @@ public class FavouriteCommand extends UndoableCommand {
 
 ---
 
-=== Enhance `Add` command
+=== Enhance Add command
 
 The add command is enhanced to allow empty fields for phone, address and email. Mechanism of the command is exactly the same as previous, with the addition of a `initialiseEmptyFields` method in `AddCommandParser`. The `initialiseEmptyFields` method appends the prefix of each empty field followed by a '-' instead of throwing a `ParseException` if fields are empty.
 
@@ -565,7 +565,7 @@ private static String initialiseEmptyFields(String args) {
 }
 ----
 
-=== Enhance `Undo/Redo` command
+=== Enhance Undo/Redo command
 
 The new `undo` and `redo` commands allows the user to specify how many commands to undo or redo (eg. `undo 5`, `redo 5`).
 The sequence of commands to be undone for `undo 5` is exactly the same as executing `undo` 5 times. Similarly for `redo`, the number specified simply runs the `redo` command the same number of times. `UndoCommandParser` and `RedoCommandParser` have been added in order to take in the index and `AddressBookParser` now calls upon `UndoCommandParser` and `RedoCommandParser` instead.
