--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -364,6 +364,87 @@ We are using `java.util.logging` package for logging. The `LogsCenter` class is 
 
 Certain properties of the application can be controlled (e.g App name, logging level) through the configuration file (default: `config.json`).
 
+=== Persisting coloured tags
+
+Enhanced feature to allow unique coloured tags to persist after the program exits without having to save color data on external files.
+
+Full Code:
+----
+private static String getColorForTag(String tagValue) {
+
+        if (!tagColors.containsKey(tagValue)) {
+            int multiplier = 1;
+            int asciiSum = (tagValue.hashCode() > 1) ? tagValue.hashCode() : tagValue.hashCode() * -1;
+
+            int colorRed = asciiSum % 256;
+            int colorGreen = (asciiSum / 2) % 256;
+            int colorBlue = (asciiSum / 3) % 256;
+            while ((colorRed + colorGreen + colorBlue) > 700) {
+                asciiSum = (asciiSum / multiplier) * ++multiplier;
+                colorRed = asciiSum % 256;
+                colorGreen = (asciiSum / 2) % 256;
+                colorBlue = (asciiSum / 3) % 256;
+            }
+            String colorString = String.format("#%02x%02x%02x", colorRed, colorGreen, colorBlue);
+            tagColors.put(tagValue, colorString);
+        }
+
+        return tagColors.get(tagValue);
+    }
+----
+
+Java's `hashcode()` method from *String* library will be used to obtain a unique 32-bit integer hash value of the tag String. We first obtain the hashcode and ensure it is a positive value.
+(Note: Identical strings will result in the same hashcode value)
+
+----
+int asciiSum = (tagValue.hashCode() > 1) ? tagValue.hashCode() : tagValue.hashCode() * -1;
+----
+
+We then do a separate division of each color and modulus it by *256* to ensure that it will stay within the RGB limit of 0 - 255.
+
+----
+int colorRed = asciiSum % 256;
+int colorGreen = (asciiSum / 2) % 256;
+int colorBlue = (asciiSum / 3) % 256;
+----
+
+To ensure that colors stays within visible range, we do a check if sum of RGB is above 700. If it is, it is likely that the color generated is too bright and would not be visible with the white font, hence regenerate the color again.
+We can use an incremental multiplier to regenerate another unique hashcode from the original hashcode. However, to prevent the numbers form getting exponentially large and exceeding the 32-bit sized integer, we shall first divide it by the previous multiplier.
+It is save to assume that chances of collision with other hashcodes is extremely low since we are using extremely large numbers.
+
+----
+while ((colorRed + colorGreen + colorBlue) > 700) {
+                asciiSum = (asciiSum / multiplier) * ++multiplier;
+                colorRed = asciiSum % 256;
+                colorGreen = (asciiSum / 2) % 256;
+                colorBlue = (asciiSum / 3) % 256;
+}
+----
+
+Finally, we format the RBG values into hexadecimal format with a hex symbol in front to conform with conventional CSS color styling before adding it into the color tag.
+
+==== Design Considerations
+
+**Aspect:** Generating of colors for `colorTag`. +
+**Alternative 1 (current choice):** Generate unique color based on tag string. +
+**Pros:** Unique tags will always have unique colors. +
+**Cons:** Hard for new developers to understand the color code generation. +
+**Alternative 2:** Create a static list of limited colors and randomly retrieve colors from there. +
+**Pros:** Does not involve complex code generation, easier for new developers to understand. +
+**Cons:** Tag colors renew whenever program restarts.
+
+---
+
+**Aspect:** Saving colors retain color persistence after program shuts down. +
+**Alternative 1 (current choice):** Morph in-built `hashcode()` function output to obtain RBG colors. +
+**Pros:** Color persistence without the need to save color details onto offline files. +
+**Cons:** Chances of certain tags resulting in generating very similar RGB colors. +
+**Alternative 2:** Save chosen tag colors onto external file. +
+**Pros:** Hard for new developers to understand how colors are retained. +
+**Cons:** Must create additional file and include additional unnecessary codes for read/write.
+
+---
+
 === Find person(s) using different details
 
 The `finds` command is an improved version from `find` command. It allows user to search using other details such as phone number, email or tag instead of just name.
