--- a/docs/team/onghongjing.adoc
+++ b/docs/team/onghongjing.adoc
@@ -3,19 +3,23 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 :imagesDir: ../images
 :stylesDir: ../stylesheets
 
-== Project: AddressBook - Level 4
-AddressBook - Level 4 is a desktop address book application used for teaching Software Engineering principles. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 6 kLoC.
+== Project: The Classroom
+The Classroom is a desktop application that helps users manage their contacts and keep track of tasks or remarks that pertain to specific contacts.
+It is especially helpful in helping students manage and increase the efficiency of their group work. +
+The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 8 kLoC. +
+The Classroom is built up from the [https://github.com/se-edu/addressbook-level4[AddressBook - Level 4]] (an address book application used for teaching Software Engineering principles) +
+(written by limyongsong)
 
-*Code contributed*: [https://github.com[Functional code]] [https://github.com[Test code]] {give links to collated code files}
+*Code contributed*: [https://github.com/CS2103AUG2017-T09-B4/main/blob/master/collated/main/Houjisan.md[Functional code]] [https://github.com/CS2103AUG2017-T09-B4/main/blob/master/collated/test/Houjisan.md[Test code]]
 
-=== Enhancement Added:
+=== Enhancement Added: Favourite a contact
 
 ==== External behavior
 
 ---
 #Start of Extract [from: User Guide]#
 
-//include::../UserGuide.adoc[tag=undoredo]
+include::..\UserGuide.adoc[tag=favourite]
 
 #End of Extract#
 
@@ -23,28 +27,79 @@ AddressBook - Level 4 is a desktop address book application used for teaching So
 
 ==== Justification
 
-{Justify the need for, and the current design (i.e. external behavior) of, the feature}
+Students will commonly have dozens of contacts as they work with others and make friends in their school modules throughout the school years.
+As a result, it can be bothersome for users to find the contact details and associated remarks of people they frequently work with or their close friends. +
+With this feature, users can favourite the contacts they specify after which the contacts will be conveniently sorted to the top of the list by default, making their contact details easily accessible and visible.
 
 ==== Implementation
 
 ---
 #Start of Extract [from: Developer Guide]#
 
-//include::../DeveloperGuide.adoc[tag=undoredo]
+include::..\DeveloperGuide.adoc[tag=favourite]
+
+#End of Extract#
+
+---
+
+=== Enhancement Added: Sort the contact list
+
+==== External behavior
+
+---
+#Start of Extract [from: User Guide]#
+
+include::..\UserGuide.adoc[tag=sort]
+
+#End of Extract#
+
+---
+
+==== Justification
+
+Sorting allows students to organize their contact list according to their preferences, which can be useful. +
+For example, sorting by phone numbers that have area codes can give a general idea of which contacts live in the same geographical area (applicable for student users in countries other than Singapore). +
+Furthermore, when the birthday field is added in a future version of The Classroom, contacts can be sorted by their birthday or age.
+
+==== Implementation
+
+---
+#Start of Extract [from: Developer Guide]#
+
+include::..\DeveloperGuide.adoc[tag=sort]
+
+#End of Extract#
+
+---
+
+=== Enhancement Added: List all existing tags
+
+==== External behavior
+
+---
+#Start of Extract [from: User Guide]#
+
+include::..\UserGuide.adoc[tag=tags]
+
+#End of Extract#
+
+---
+
+==== Justification
+
+As the student uses The Classroom over a long time, the number of tags will continually increase, making it hard for the student to keep track of all the currently existing tags. +
+Being able to see a list of the tags that are currently tagged to the contacts in The Classroom helps the student in finding contacts by tag and removing tags that are no longer needed.
+
+==== Implementation
+
+---
+#Start of Extract [from: Developer Guide]#
+
+include::..\DeveloperGuide.adoc[tag=tags]
 
 #End of Extract#
 
 ---
 
 === Enhancement Proposed:
-
-//{Explain similar to the Undo/Redo feature above.}
-
-=== Other contributions
-
-//* Updated the GUI color scheme (Pull requests https://github.com[#33], https://github.com[#34])
-//* Wrote additional tests to increase coverage from 88% to 92% (Pull requests https://github.com[#36], https://github.com[#38])
-
-== Project:
-
-{Optionally (not graded), you may include other projects in your portfolio.}
+Adding a birthday field to contact details and enable finding contacts by birthday day, month, year
