--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -122,6 +122,7 @@ The default system of Mobilize will be address book.
 
 === Managing Contacts
 
+// tag::birthday[]
 ==== Adding new contacts : `add`
 
 Whether you’ve just met a new colleague or reconnected with an old friend, adding new contacts to Mobilize is easy! +
@@ -153,7 +154,9 @@ __Constraints:__
 * BIRTHDAY must be a eight-digit number in “dd-mm-yyyy” format.
 * Every TAG must be preceded by a tag prefix, t/.
 ****
+// end::birthday[]
 
+// tag::findtag[]
 ==== Finding contacts by name: `find`
 
 Whether you’re a social butterfly or a networking pro, sifting through contacts can be a tedious task. +
@@ -191,6 +194,7 @@ Returns any person having birthday of `17-07`
 __Constraints:__
 
 * Only full words will be matched e.g `Han` will not match `Hans`, `friend` will not match `friends` and `1707` will not match `17-07`
+// end::findtag[]
 
 ==== Deleting contacts : `delete`
 
@@ -424,6 +428,7 @@ __Constraints:__
 * Only valid date will be matched e.g `291017` will not match `29-10-2017`.
 ****
 
+// tag::deletetask[]
 ==== Deleting tasks : `delete`
 
 To delete the specified task from the task manager, use: +
@@ -438,6 +443,7 @@ __Constraints__
 * If a task is first searched by the “find” feature, then the new index of the task according to the filtered list of Task Cards, is what must be used in the INDEX parameter.
 * The index *must be a positive integer* `1, 2, 3, ...`
 ****
+// end::deletetask[]
 
 ==== Editing tasks: `edit`
 
