--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -445,6 +445,8 @@ Sort command takes in command `OPTIONS` to perform sorting by five fields of a p
 **Pros:** No inheritance required, minimise error. +
 **Cons:** 'SortCommand' class specific, cannot be reused by other commands.
 
+---
+
 **Aspect:** Implementation of sort +
 **Alternative 1 (current choice):** Lambda expression +
 **Pros:** Short and concise. +
@@ -540,8 +542,6 @@ public class FavouriteCommand extends UndoableCommand {
 **Pros:** Does not mess up the original order. +
 **Cons:** Will use more memory (significant if favourite list is large).
 
----
-
 === Todo mechanism
 
 Todo mechanism uses `CommandOptionUtil` to parse its options. The model class for each todo item is `TodoItem`, which has three fields including start, end, task to describe an item. +
@@ -552,6 +552,46 @@ When todo command need to add or delete some items, todo mechanism will call met
 === Select mechanism
 
 Select command also has options. After parsed by `AddressBookParser` and `CommandOptionUtil`, select mechanism sends `ChangeSearchEvent` to `BrowserPanel` in order to change search url. Then, it sends `JumpToListRequestEvent` to change selection in `PersonListPanel` and `PersonListPanel` will send `PersonPanelSelectionChangedEvent` to `BrowserPanel` to indicate which person is selected.
+
+// tag::deletebyname[]
+=== Delete by name mechanism
+
+It is an undoable delete command that offers an alternative to the existing delete command.
+
+It takes in the `String` user input name and compare it with all persons' name field. As the iterator traverse through the contact list, the first person with the occurrence of the specified `String` name will be removed from the list.
+
+As the command will always call the entire list for comparison, there is no need to modify list for the command to e executed.
+// end::deletebyname[]
+
+// tag::export[]
+=== Export mechanism
+
+It first creates a `File` object with the user specified file path.
+
+The command then returns the current address book as a `ReadOnlyAddressBook` object and then serialize it using `XmlSerializableAddressBook` class constructor.
+
+Saving of data is achieved with `XmlFileStorage#saveDataToFile` method which saves the above mentioned serialized address book into the newly created file.
+
+Code fragments to show above mentioned export mechanism:
+[source,java]
+----
+ReadOnlyAddressBook localAddressBook = model.getAddressBook();
+
+File file = new File(userPrefsFilePath);
+
+try {
+    FileUtil.createIfMissing(file);
+} catch (IOException e) {
+    return new CommandResult(MESSAGE_STORAGE_ERROR);
+}
+
+try {
+    XmlFileStorage.saveDataToFile(file, new XmlSerializableAddressBook(localAddressBook));
+} catch (FileNotFoundException e) {
+    return new CommandResult(MESSAGE_STORAGE_ERROR);
+}
+----
+// end::export[]
 
 === Logging
 
