--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -63,15 +63,12 @@ e.g. typing *`help`* and pressing kbd:[Enter] will open the help window.
 .  Refer to the link:#features[Features] section below for more details of each command.
 
 == Features
+// tag::meetingCard[]
+=== Meeting Card
+The meeting card provides you the information of the meetings that you have scheduled. As you can see from the Figure 2, the `NameMeeting`, `DateTime`, `PersonToMeet`, `PhoneNum` and `Location` are all shown to remind you of your certain meeting.
 
-=== Meeting Alerts
-
-
-image::Reminder.png[width="600"]
-_Figure 2: Pop-up Notification_
-
-. Upon opening up the application, if there is a meeting(s) on the same day, you will be reminded via a pop-up message
-. As Shown to you in the figure 2, the information regarding the next upcoming meeting is displayed in the message
+image::MeetingCard.png[width="200"]
+_Figure 2: Meeting Card_
 
 === Meeting Card Colours
 
@@ -96,11 +93,25 @@ image::MeetingCard3.png[width="200"]
 +
 _Figure 3C: Orange Meeting Card_
 
+// end::meetingCard[]
 
+// tag::popUp[]
+=== Meeting Alerts
+
+
+image::Reminder.png[width="600"]
+_Figure 4: Pop-up Notification_
+
+. Upon opening up the application, if there is a meeting(s) on the same day, you will be reminded via a pop-up message
+. As Shown to you in the figure 2, the information regarding the next upcoming meeting is displayed in the message
+// end::popUp[]
+
+// tag::autodelete[]
 === Auto Deletion of Meeting Cards
 
 Upon start up of the application, meetings which have already passed the current time of log in will be deleted and no
 longer be shown
+// end::autodelete[]
 
 === Loading of Meeting Location in Google Maps
 
@@ -108,6 +119,7 @@ Upon selecting a meeting, the location of meeting will be automatically entered 
 The screenshot below shows the loaded Google Maps upon entering the `selectmeeting` command.
 
 image::googlemaps.png[width="800"]
+_Figure 5: GoogleMaps_
 
 == Commands
 
@@ -248,14 +260,14 @@ Input format for `IMPORTANCE` is 0-2.
 +
 image::MeetingGroup.png[width="200"]
 +
-_Figure 4A: Meeting Cards for Group Meeting_
+_Figure 6A: Meeting Cards for Group Meeting_
 +
 * When you are attempting to add a meeting with the same date and time as a pre-existing one in ScheduBook, the following
 error will be shown, preventing you from having 2 different meetings with exactly the same date and time
 +
 image::MeetingClash.png[width="500"]
 +
-_Figure 4B: Clash Meeting Error_
+_Figure 6B: Clash Meeting Error_
 ****
 
 Examples:
