Minor modification for documentation of DeveloperGuide and UserGuide

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -394,6 +394,7 @@ private static String getColorForTag(String tagValue) {
 ----
 
 Java's `hashcode()` method from *String* library will be used to obtain a unique 32-bit integer hash value of the tag String. We first obtain the hashcode and ensure it is a positive value.
+Function *getColorForTag(String tagValue)* is supposedly implemented in the PersonCard class, as expected from suggestions on developer guide UI component.
 (Note: Identical strings will result in the same hashcode value)
 
 ----
