--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -359,7 +359,7 @@ Reinitializing of myBook will display the previous choice of theme.
 Contacts in user myBook app that has `Important` or `important` tag will always appear at the top of the list. +
 User using versions before v1.2 should add a new person with `important` tag first to enjoy this feature.
 
-==== Sorted Contacts (v1.3)
+=== Sorted Contacts (v1.3)
 
 *Author*: Soh Hong Hwee
 
