--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -630,6 +630,93 @@ requires users to reset their contacts' `cluster` via deletion and addition or v
 **Cons:** Tedious for users. They also have to ensure that they do not make spelling mistakes.
 // end::cluster[]
 
+// tag::interest[]
+=== Interest Calculator Mechanism
+
+As a debt collector, it can be troublesome to manage so many debts. The task is made more tedious when the debt collector has to +
+consider all the debtor's loan's interest rates as well. Codii is able to automatically calculate a `Person` 's new debt based on his / her's +
+interest rate. Whenever the user logs into Codii, the `Model` component, which handles the event `LoginAppRequestEvent` and checks every +
+`Person` in the `AddressBook`.
+
+[source, java]
+----
+@Subscribe
+    public void handleLoginUpdateDebt(LoginAppRequestEvent event) {
+        // login is successful
+        if (event.getLoginStatus() == true) {
+            for (ReadOnlyPerson person : allPersons) {
+                if (!person.getInterest().value.equals("No interest set.")
+                        && (person.checkLastAccruedDate(new Date()) != 0)) {
+                    updateDebtFromInterest(person, person.checkLastAccruedDate(new Date()));
+                }
+            }
+        }
+    }
+----
+
+As seen from the above if a `Person` has his / her interest field defined,the event handler checks a `Person` 's debts last accrued date via the method:
+
+[source, java]
+----
+    /**
+     * Compares date of last accrued against current date.
+     * @return number of months the current date is ahead of last accrued date. Returns 0 if
+     * there is no need to increment debt.
+     */
+    @Override
+    public int checkLastAccruedDate(Date currentDate) {
+        if (lastAccruedDate.before(currentDate)) {
+            return DateUtil.getNumberOfMonthBetweenDates(currentDate, lastAccruedDate);
+        } else {
+            return 0;
+        }
+    }
+----
+
+The above method returns the difference in the number of months between the last accrued date and the current date to the event handler. The event
+handler than calls another method to update the `Person` 's debt by passing in the number of months as a parameter:
+
+[source, java]
+----
+    @Override
+    public void updateDebtFromInterest(ReadOnlyPerson person, int differenceInMonths) {
+        String accruedAmount = person.calcAccruedAmount(differenceInMonths);
+        try {
+            Debt amount = new Debt(accruedAmount);
+            addDebtToPerson(person, amount);
+        } catch (PersonNotFoundException pnfe) {
+            assert false : "Should not occur as person obtained from allPersons";
+        } catch (IllegalValueException ive) {
+            assert false : Debt.MESSAGE_DEBT_CONSTRAINTS;
+        }
+    }
+----
+
+From the above code, the `Person` 's debts accrued amount would be calculated by the line:
+
+[source, java]
+----
+String accruedAmount = person.calcAccruedAmount(differenceInMonths);
+----
+
+Their respective debts would then be updated accordingly with the following line:
+
+[source, java]
+----
+addDebtToPerson(person, amount);
+----
+
+==== Design Considerations
+
+**Aspect:** When to update / check a Person's debt. +
+**Alternative 1 (Current choice):** Check through the `AddressBook` in the `Model` component every time the user logs in. +
+**Pros:** Convenient and intuitive to implement for developer. +
+**Cons:** If user never logs out, the debt would not be accrued. +
+**Alternative 2:** Create a `Refresh` command that does the checking instead of relying on the `LoginAppRequestEvent`. +
+**Pros:** User can have the most up-to-date debt as long as he / she remembers to always enter the `Refresh` command. +
+**Cons:** Not convenient for user at all. It is also unlikely that the user would remain logged in for such a long duration. +
+// end::interest[]
+
 === Logging
 
 We are using `java.util.logging` package for logging. The `LogsCenter` class is used to manage the logging levels and logging destinations.
